# cpp-server

./: .env  .gitignore  CMakeLists.txt  README.md  server_output.txt  test.txt  test_output.txt
note/: epoll.md  note.md  threadPool.md  使用gdb调试.md
note/design_architecture/: demo1.md  demo2.md
src/: client.cpp  server.cpp
src/error/: socket_exception.cpp  socket_exception.h
src/threadPool/: safeQueue.h  threadPool.cpp  threadPool.h  worker.cpp  worker.h
src/util/: Epoll.cpp  InetAddress.cpp  InetAddress.h  acceptor.cpp  acceptor.h  buffer.cpp  buffer.h  channel.cpp  channel.h  epoll.cpp  epoll.h  eventLoop.cpp  eventLoop.h  server.cpp  server.h  socket.cpp  socket.h  tcpConnection.cpp  tcpConnection.h  util.cpp  util.h  util_socket.cpp  util_socket.h
tests/: many_client_request.cpp  syn_attack.cpp  threadPool.cpp  threadPoolTest.cpp
tools/: .gdbinit  classes.puml  command.gdb  format.sh  look_mem.sh  plantUML.sh
